force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/PDF_Template__c.object-meta.xml
<CustomObject>
    <description>Stores PDF template definitions for document generation</description>
    <label>PDF Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 