force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the PDF template</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField> 