force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates if this template is active and available for use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>