force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <description>Page orientation for the PDF template</description>
    <label>Orientation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>portrait</fullName>
                <default>true</default>
                <label>Portrait</label>
            </value>
            <value>
                <fullName>landscape</fullName>
                <label>Landscape</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>