force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of pages in this template</description>
    <label>Page Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>