force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description>Paper size for the PDF template</description>
    <label>Page Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A4</fullName>
                <default>true</default>
                <label>A4</label>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>