force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Version number of the template</description>
    <label>Template Version</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>